[package]
name = "aave_struggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = { version = "0.28", default-features = false, features = [
    "colors",
] }
markovish = "0.2"
log = "0.4"
rand = "0.8"
itertools = "0.12"
tokio = { version = "1.37", features = ["full"] }
tumblr_api = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
